# app/models/sync_log.py
@@ -8,10 +8,13 @@ class SyncLog(db.Model):
     __tablename__ = "sync_logs"
 
     id = db.Column(db.UUID, primary_key=True, default=uuid.uuid4)
+    sync_type = db.Column(
+        db.String(20), nullable=False, default="full", comment="full or changes"
+    )
     last_sync_at = db.Column(db.DateTime, nullable=False)
     total_inserted = db.Column(db.Integer, nullable=False, default=0)
     total_updated = db.Column(db.Integer, nullable=False, default=0)
-    status = db.Column(db.String(20), nullable=False, comment="success, failed")
+    status = db.Column(db.String(20), nullable=False, comment="success, failed, in_progress, stopped")
     last_synced_endpoint = db.Column(
         db.String(50), nullable=True, comment="last endpoint synced"
     )
